manifests/0000_50_olm_07-collect-profiles.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: collect-profiles
  namespace: openshift-operator-lifecycle-manager
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    release.openshift.io/delete: "true"
    capability.openshift.io/name: "OperatorLifecycleManager"
    include.release.openshift.io/hypershift: "true"
spec:
  podSelector:
    matchLabels:
      app: olm-collect-profiles
  egress:
    - ports:
        - port: 8443
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              name: openshift-operator-lifecycle-manager
        - podSelector:
            matchLabels:
              app: olm-operator
        - podSelector:
            matchLabels:
              app: catalog-operator
    - {}
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
        - port: 5353
          protocol: TCP
        - port: 5353
          protocol: UDP
  policyTypes:
    - Egress
    - Ingress
